# bits

./: .gitignore  .travis.yml  CoqMakefile.local  INSTALL  Makefile  README  README.md  _CoqProject  coq-bits.opam  default.nix  dune  dune-project  meta.yml  opam
.github/workflows/: coq-ci.yml  docker-action.yml
src/: bits.v  dune  integers.v  nat.v  operations.v  ops.v  repr.v  spec.v  tuple.v
src/extraction/: axioms.v  axioms16.v  axioms32.v  axioms63.v  axioms8.v  forall.ml  magic.patch  test.ml  verif.sh
src/operations/: properties.v
src/repr/: operations.v  properties.v  refinement.v
src/representation/: properties.v
src/spec/: notation.v  notations.v  operations.v  properties.v  spec.v
src/spec/operations/: properties.v
src/spec/spec/: properties.v
src/ssrextra/: nat.v  tuple.v
test/: Makefile  _CoqProject  benchmark.v  integers.v
