opam-version: "2.0"
maintainer: "anton.a.trunov@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/bits"
dev-repo: "git+https://github.com/coq-community/bits.git"
bug-reports: "https://github.com/coq-community/bits/issues"
license: "Apache-2.0"

synopsis: "A bit vector library"
description: """
A formalization of bitset operations in Coq and the corresponding
axiomatization and extraction to OCaml native integers"""

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "ocaml" {(>= "4.05" & < "4.10~")}
  "coq" {(>= "8.7" & < "8.12~") | (= "dev")}
  "coq-mathcomp-algebra" {(>= "1.7" & < "1.11~") | (= "dev")}
]

tags: [
  "category:Computer Science/Data Types and Data Structures"
  "keyword:bit arithmetic"
  "keyword:bitset"
  "keyword:bit vector"
  "keyword:extraction"
  "logpath:Bits"
]
authors: [
  "Andrew Kennedy <akenn@microsoft.com>"
  "Arthur Blot <arthur.blot@ens-lyon.fr>"
  "Pierre-Évariste Dagand <pierre-evariste.dagand@lip6.fr>"
]
